Fixed GCC_VERN and GCC_VERS
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23975 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/gnudevarm/Makefile.dpkg
+++ b/toolchain/gnudevarm/Makefile.dpkg
@@ -24,8 +24,8 @@ MUNTSOS		?= ../..
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 
-GCC_VERN	:= $(shell $(gcc-$(TOOLCHAIN_NAME))/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$3 }')
-GCC_VERS	:= $(shell $(gcc-$(TOOLCHAIN_NAME))/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$0 }')
+GCC_VERN	:= $(shell gcc-$(TOOLCHAIN_NAME)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$3 }')
+GCC_VERS	:= $(shell gcc-$(TOOLCHAIN_NAME)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$0 }')
 
 BUILDNUM	?= 1
 PKGNAME		:= gcc-$(TOOLCHAIN_NAME)
