scp package files to $(SERVERDIR), if defined.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23978 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -1261,6 +1261,9 @@ $(PKGDIR): $(INSTALLDIR)/COPYING
 	touch $@
 
 package.deb: $(PKGFILE)
+ifneq ($(SERVERDIR),)
+	scp $(PKGFILE) $(SERVERDIR)
+endif
 
 ###############################################################################
 
