Renamed control to control.template
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23979 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -1236,7 +1236,7 @@ copying: $(INSTALLDIR)/COPYING
 
 $(PKGDIR): $(INSTALLDIR)/COPYING
 	mkdir -p					$(PKGDIR)/DEBIAN
-	install -cm 0644 control			$(PKGDIR)/DEBIAN
+	install -cm 0644 control.template		$(PKGDIR)/DEBIAN
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
