scp package files to $(SERVERDIR), if defined.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23981 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -141,6 +141,9 @@ $(PKGDIR): libsimpleio.a libsimpleio.so libsimpleio.lib libsimpleiogm2.a libwioe
 	touch $@
 
 package.deb: $(PKGFILE)
+ifneq ($(SERVERDIR),)
+	scp $(PKGFILE) $(SERVERDIR)
+endif
 
 ###############################################################################
 
