Renamed control to control.template
and scp package files to $(SERVERDIR), if defined.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23986 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -126,7 +126,7 @@ endif
 
 package.deb: install.done
 	mkdir -p					$(PKGDIR)/DEBIAN
-	install -cm 0644 control			$(PKGDIR)/DEBIAN
+	install -cm 0644 control.template		$(PKGDIR)/DEBIAN/control
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@ARCH@@/$(PKGARCH)/g			$(PKGDIR)/DEBIAN/control
 	sed -i s/@@VERSION@@/$(PKGVER)/g		$(PKGDIR)/DEBIAN/control
@@ -148,3 +148,5 @@ reallyclean: clean
 
 distclean: reallyclean
 	-rm $(FPC_DIST)
+ifneq ($(SERVERDIR),)
+	scp gcc*.deb gcc*.rpm $(SERVERDIR)
