Renamed control to control.template
and scp package files to $(SERVERDIR), if defined.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23987 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -135,6 +135,9 @@ package.deb: install.done
 	chmod -R ugo-w					$(PKGDIR)/usr/local/*
 	fakeroot dpkg-deb --build			$(PKGDIR)
 	chmod -R ugo+w					$(PKGDIR)
+ifneq ($(SERVERDIR),)
+	scp fpc*.deb fpc*.rpm $(SERVERDIR)
+endif
 
 ################################################################################
 
@@ -148,5 +151,3 @@ reallyclean: clean
 
 distclean: reallyclean
 	-rm $(FPC_DIST)
-ifneq ($(SERVERDIR),)
-	scp gcc*.deb gcc*.rpm $(SERVERDIR)
