Fixed scp command
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23988 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -136,7 +136,7 @@ package.deb: install.done
 	fakeroot dpkg-deb --build			$(PKGDIR)
 	chmod -R ugo+w					$(PKGDIR)
 ifneq ($(SERVERDIR),)
-	scp fpc*.deb fpc*.rpm $(SERVERDIR)
+	scp $(PKGFILE) $(SERVERDIR)
 endif
 
 ################################################################################
