Added missing touch build.done
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23989 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/gnudevarm/Makefile
+++ b/toolchain/gnudevarm/Makefile
@@ -101,6 +101,7 @@ BUILDSCRIPT	:= build-cross-linux-toolchain.sh
 
 build.done: source.done
 	PATH=$(BUILDPATH) $(BUILDSCRIPT) $(BUILDOPTIONS)
+	touch $@
 
 ##############################################################################
 
