--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -165,8 +165,8 @@ stage.done: gcc.build.done
 	rsync -avcqL --delete $(INSTALLDIR)$(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/bin/ gcc-$(TOOLCHAIN_NAME)/$(CONFIGURE_NAME)/bin
 	rsync -avcqL --delete $(TOOLCHAIN_DIR)/share/gpr/ gcc-$(TOOLCHAIN_NAME)/share/gpr
 	chmod -R u+w gcc-$(TOOLCHAIN_NAME)
+	sed -i 's#& ("-shared-libgcc")#\& ("-shared-libgcc", "-Wl,-rpath-link=$(LIBSLIBDIR)")#g' gcc-$(TOOLCHAIN_NAME)/share/gpr/*.cgpr
 	sed -i 's#/usr/local#C:/PROGRA~1/MuntsOS#g' gcc-$(TOOLCHAIN_NAME)/share/gpr/*
-	sed -i 's#("-shared-libgcc")#("-shared-libgcc", "-Wl,-rpath-link=$(LIBSLIBDIR)")#g' gcc-$(TOOLCHAIN_NAME)/share/gpr/*.cgpr
 	mkdir -p			$(GPRBUILDDEST)
 	tar xzf $(GPRBUILDDIST) -C	$(GPRBUILDDEST)
 	chmod -R u+w gcc-$(TOOLCHAIN_NAME)
@@ -184,6 +184,9 @@ stage.done: gcc.build.done
 tarball.done: stage.done
 	tar cJf gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.tar.xz gcc-$(TOOLCHAIN_NAME) --mode=ugo-w
 	md5sum -b gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.tar.xz >gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.md5
+ifneq ($(SERVERDIR),)
+	scp gcc*.xz gcc*.md5 $(SERVERDIR)
+endif
 	touch $@
 
 ##############################################################################
