Build from combined GCC and binutils source tree
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24006 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -32,22 +32,17 @@ BINSRC		:= binutils-$(BINVER)
 BINSERVER	:= https://ftp.gnu.org/gnu/binutils
 BINTARBALL	:= $(BINSRC).tar.gz
 BINURL		:= $(BINSERVER)/$(BINTARBALL)
-BINDIST		:= $(TEMP)/$(BINTARBALL)
-BINBUILD	:= $(shell pwd)/binutils.build
-
-BINCONFIGOPTS	:= --prefix=$(TOOLCHAIN_DIR)
-BINCONFIGOPTS	:= $(BINCONFIGOPTS) --host=x86_64-w64-mingw32
-BINCONFIGOPTS	:= $(BINCONFIGOPTS) --target=$(CONFIGURE_NAME)
-BINCONFIGOPTS	:= $(BINCONFIGOPTS) --disable-lto
-BINCONFIGOPTS	:= $(BINCONFIGOPTS) --disable-nls
+BINDIST		:= $(TEMP)/muntsos/$(BINTARBALL)
 
 GCCVER		:= 15.2.0
 GCCSRC		:= gcc-$(GCCVER)
 GCCSERVER	:= https://ftp.gnu.org/gnu/gcc/$(GCCSRC)
 GCCTARBALL	:= $(GCCSRC).tar.gz
 GCCURL		:= $(GCCSERVER)/$(GCCTARBALL)
-GCCDIST		:= $(TEMP)/$(GCCTARBALL)
-GCCBUILD	:= $(shell pwd)/gcc.build
+GCCDIST		:= $(TEMP)/muntsos/$(GCCTARBALL)
+GCCBUILD	:= $(shell pwd)/build.d
+GCCINSTALL	:= $(shell pwd)/install.d
+GCCSTAGE	:= gcc-$(TOOLCHAIN_NAME)
 
 GCCCONFIGOPTS	:= --prefix=$(TOOLCHAIN_DIR)
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --host=x86_64-w64-mingw32
@@ -66,10 +61,11 @@ GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-multilib
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-nls
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-plugin
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-sjlj-exceptions
+GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-werror
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --disable-tm-clone-registry
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-__cxa_atexit
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-languages=c,c++,ada,fortran,go
-GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-libstdcxx 
+GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-libstdcxx
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-long-long
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-target-optspace
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-threads
@@ -84,12 +80,12 @@ GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --without-zstd
 
 GPRBUILDVER	:= 25.0.1
 GPRBUILDDIST	:= gprbuild-$(GPRBUILDVER)-win64.tgz
-GPRBUILDDEST	:= gcc-$(TOOLCHAIN_NAME)/libexec/gprbuild-alire$(GPRBUILDVER)
+GPRBUILDDEST	:= $(GCCSTAGE)/libexec/gprbuild-alire$(GPRBUILDVER)
 
 BUILDNUM	?= 1
-INSTALLDIR	:= $(shell pwd)/install.d
-RELEASE		:= $(GCCVER).$(shell date +%Y.%j)-$(BUILDNUM)
-STAGEDIR	:= gcc-$(TOOLCHAIN_NAME)
+RELEASEID	:= $(GCCVER).$(shell date +%Y.%j)-$(BUILDNUM)
+RELEASETAR	:= gcc-$(TOOLCHAIN_NAME)-$(RELEASEID)-win64.tar.xz
+RELEASEMD5	:= gcc-$(TOOLCHAIN_NAME)-$(RELEASEID)-win64.md5
 
 default: tarball.done
 
@@ -103,44 +99,28 @@ prepare.done:
 
 ##############################################################################
 
-# Download and build binutils, cross-compiled for Windows 64
+# Download source distributions
 
 $(BINDIST):
 	wget -O $(BINDIST) $(BINURL)
-
-binutils.source.done : $(BINDIST)
-	tar xzf $(BINDIST)
 	touch $@
-
-binutils.config.done: prepare.done binutils.source.done
-	rm -rf $(BINBUILD)
-	mkdir $(BINBUILD)
-	cd $(BINBUILD) && PATH=$(BUILDPATH) ../$(BINSRC)/configure $(BINCONFIGOPTS)
-	touch $@
-
-binutils.build.done: prepare.done binutils.config.done
-	cd $(BINBUILD) && PATH=$(BUILDPATH) $(MAKE)
-	cd $(BINBUILD) && PATH=$(BUILDPATH) $(MAKE) install DESTDIR=$(INSTALLDIR)
-	touch $@
-
-##############################################################################
-
-# Download and build GCC, cross compiled for Windows 64
 
 $(GCCDIST):
 	wget -O $(GCCDIST) $(GCCURL)
 	touch $@
 
-# Unpack GCC source distribution
+# Unpack source distributions
 
-gcc.source.done : $(GCCDIST)
+source.done : $(BINDIST) $(GCCDIST)
 	tar xzf $(GCCDIST)
 	cd $(GCCSRC) && contrib/download_prerequisites
+	tar xzf $(BINDIST)
+	-cd $(GCCSRC) && for ITEM in ../$(BINSRC)/* ; do ln -s $$ITEM ; done
 	touch $@
 
 # Configure GCC cross-toolchain
 
-gcc.config.done: binutils.build.done gcc.source.done
+config.done: source.done
 	rm -rf $(GCCBUILD)
 	mkdir $(GCCBUILD)
 	cd $(GCCBUILD) && PATH=$(BUILDPATH) ../$(GCCSRC)/configure $(GCCCONFIGOPTS)
@@ -148,9 +128,9 @@ gcc.config.done: binutils.build.done gcc.source.done
 
 # Build GCC cross-toolchain
 
-gcc.build.done: gcc.config.done
+build.done: config.done
 	cd $(GCCBUILD) && PATH=$(BUILDPATH) $(MAKE)
-	cd $(GCCBUILD) && PATH=$(BUILDPATH) $(MAKE) install DESTDIR=$(INSTALLDIR)
+	cd $(GCCBUILD) && PATH=$(BUILDPATH) $(MAKE) install DESTDIR=$(GCCINSTALL)
 	touch $@
 
 ##############################################################################
@@ -158,23 +138,23 @@ gcc.build.done: gcc.config.done
 # Create GCC cross-toolchain installation tree, with sysroot merged, gprbuild
 # merged, and all symbolic links replaced with their targets
 
-stage.done: gcc.build.done
-	rm -rf gcc-$(TOOLCHAIN_NAME)
-	cp -R -L -p $(INSTALLDIR)$(TOOLCHAIN_DIR) .
-	rsync -avcqL --delete $(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/ gcc-$(TOOLCHAIN_NAME)/$(CONFIGURE_NAME)
-	rsync -avcqL --delete $(INSTALLDIR)$(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/bin/ gcc-$(TOOLCHAIN_NAME)/$(CONFIGURE_NAME)/bin
-	rsync -avcqL --delete $(TOOLCHAIN_DIR)/share/gpr/ gcc-$(TOOLCHAIN_NAME)/share/gpr
-	chmod -R u+w gcc-$(TOOLCHAIN_NAME)
-	sed -i 's#& ("-shared-libgcc")#\& ("-shared-libgcc", "-Wl,-rpath-link=$(LIBSLIBDIR)")#g' gcc-$(TOOLCHAIN_NAME)/share/gpr/*.cgpr
-	sed -i 's#/usr/local#C:/PROGRA~1/MuntsOS#g' gcc-$(TOOLCHAIN_NAME)/share/gpr/*
+stage.done: build.done
+	rm -rf $(GCCSTAGE)
+	cp -R -L -p $(GCCINSTALL)$(TOOLCHAIN_DIR) .
+	rsync -avcqL --delete $(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/ $(GCCSTAGE)/$(CONFIGURE_NAME)
+	rsync -avcqL --delete $(GCCINSTALL)$(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/bin/ $(GCCSTAGE)/$(CONFIGURE_NAME)/bin
+	rsync -avcqL --delete $(TOOLCHAIN_DIR)/share/gpr/ $(GCCSTAGE)/share/gpr
+	chmod -R u+w $(GCCSTAGE)
+	sed -i 's#& ("-shared-libgcc")#\& ("-shared-libgcc", "-Wl,-rpath-link=$(LIBSLIBDIR)")#g' $(GCCSTAGE)/share/gpr/*.cgpr
+	sed -i 's#/usr/local#C:/PROGRA~1/MuntsOS#g' $(GCCSTAGE)/share/gpr/*
 	mkdir -p			$(GPRBUILDDEST)
 	tar xzf $(GPRBUILDDIST) -C	$(GPRBUILDDEST)
-	chmod -R u+w gcc-$(TOOLCHAIN_NAME)
+	chmod -R u+w $(GCCSTAGE)
 	rm -rf				$(GPRBUILDDEST)/alire*
 	rm -rf				$(GPRBUILDDEST)/doinstall
 	rm -rf				$(GPRBUILDDEST)/share
-	cd gcc-$(TOOLCHAIN_NAME)/bin && for P in ../libexec/gprbuild-alire$(GPRBUILDVER)/bin/*.exe ; do cp $$P . ; done
-	cd gcc-$(TOOLCHAIN_NAME) && find * -type f -exec md5sum -b {} ";" | grep -v checksums.md5 >checksums.md5
+	cd $(GCCSTAGE)/bin && for P in ../libexec/gprbuild-alire$(GPRBUILDVER)/bin/*.exe ; do cp $$P . ; done
+	cd $(GCCSTAGE) && find * -type f -exec md5sum -b {} ";" | grep -v checksums.md5 >checksums.md5
 	touch $@
 
 ##############################################################################
@@ -182,8 +162,8 @@ stage.done: gcc.build.done
 # Create GCC cross-toolchain release tarball
 
 tarball.done: stage.done
-	tar cJf gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.tar.xz gcc-$(TOOLCHAIN_NAME) --mode=ugo-w
-	md5sum -b gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.tar.xz >gcc-$(TOOLCHAIN_NAME)-$(RELEASE)-win64.md5
+	tar cJf $(RELEASETAR) $(GCCSTAGE) --mode=ugo-w
+	md5sum -b $(RELEASETAR) > $(RELEASEMD5)
 ifneq ($(SERVERDIR),)
 	scp gcc*.xz gcc*.md5 $(SERVERDIR)
 endif
@@ -197,6 +177,6 @@ clean:
 	rm -rf gcc*ctng* stage.done tarball.done
 
 reallyclean: clean
-	rm -rf $(BINSRC) $(BINBUILD) $(GCCSRC) $(GCCBUILD) $(INSTALLDIR) *.done
+	rm -rf $(BINSRC) $(GCCSRC) $(GCCBUILD) $(GCCINSTALL) *.done
 
 distclean: reallyclean
