Patch gcc to disable .base64 assembler directive.
binutils 2.41 doesn't support .base64.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24007 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -113,6 +113,7 @@ $(GCCDIST):
 
 source.done : $(BINDIST) $(GCCDIST)
 	tar xzf $(GCCDIST)
+	patch -b -p 0 <gcc.patch
 	cd $(GCCSRC) && contrib/download_prerequisites
 	tar xzf $(BINDIST)
 	-cd $(GCCSRC) && for ITEM in ../$(BINSRC)/* ; do ln -s $$ITEM ; done
