Raspberry Pi 1 is not armv8
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24011 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -72,7 +72,12 @@ GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-threads
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-threads=posix
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-tls
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --enable-tls
+ifeq ($(BOARDNAME), AArch64)
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --with-arch=armv8-a
+endif
+ifeq ($(BOARDNAME), RaspberryPi1)
+GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --with-cpu=arm1176jzf-s --with-fpu=vfpv2 --with-float=hard
+endif
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --with-sysroot=$(GCCSYSROOT)
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --without-system-zlib
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --without-long-double-128
