Define GPRBUILDDIST with ?=
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24015 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -84,7 +84,7 @@ GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --without-long-double-128
 GCCCONFIGOPTS	:= $(GCCCONFIGOPTS) --without-zstd
 
 GPRBUILDVER	:= 25.0.1
-GPRBUILDDIST	:= gprbuild-$(GPRBUILDVER)-win64.tgz
+GPRBUILDDIST	?= gprbuild-$(GPRBUILDVER)-win64.tgz
 GPRBUILDDEST	:= $(GCCSTAGE)/libexec/gprbuild-alire$(GPRBUILDVER)
 
 BUILDNUM	?= 1
