Removed -alire$(GPRBUILDVER) from GPRBUILDDIR
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24029 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile.dpkg
+++ b/toolchain/crosstool/Makefile.dpkg
@@ -44,7 +44,7 @@ endif
 ifeq ($(PKGARCH), arm64)
 GPRBUILDDIST	:= $(HOME)/.local/share/alire/toolchains/gprbuild_25.0.1_5e58c08e
 endif
-GPRBUILDDIR	:= libexec/gprbuild-alire$(GPRBUILDVER)
+GPRBUILDDIR	:= libexec/gprbuild
 GPRBUILDDEST	:= $(PKGDIR)$(TOOLCHAIN_DIR)/$(GPRBUILDDIR)
 
 default: package.deb
