Use rsync -avcqL --delete instead of cp -R -L -p
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@24030 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/win64/cross-muntsos/Makefile
+++ b/toolchain/crosstool/win64/cross-muntsos/Makefile
@@ -154,11 +154,11 @@ endif
 
 stage.done: build.done
 	rm -rf $(GCCSTAGE)
-	cp -R -L -p $(GCCINSTALL)$(TOOLCHAIN_DIR) .
-	rmdir $(GCCSTAGE)/include
+	rsync -avcqL --delete $(GCCINSTALL)$(TOOLCHAIN_DIR)/ $(GCCSTAGE)
 	rsync -avcqL --delete $(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/ $(GCCSTAGE)/$(CONFIGURE_NAME)
 	rsync -avcqL --delete $(GCCINSTALL)$(TOOLCHAIN_DIR)/$(CONFIGURE_NAME)/bin/ $(GCCSTAGE)/$(CONFIGURE_NAME)/bin
 	rsync -avcqL --delete $(TOOLCHAIN_DIR)/share/gpr/ $(GCCSTAGE)/share/gpr
+	rmdir $(GCCSTAGE)/include
 	chmod -R u+w $(GCCSTAGE)
 	sed -i 's#& ("-shared-libgcc")#\& ("-shared-libgcc", "-Wl,-rpath-link=$(LIBSLIBDIR)")#g' $(GCCSTAGE)/share/gpr/*.cgpr
 	sed -i 's#/usr/local#C:/PROGRA~1/MuntsOS#g' $(GCCSTAGE)/share/gpr/*
